# memory-replay

./: .gitmodules  Makefile.am  README.md  configure.ac
src/: code_tracer.c  code_tracer.h  forkvm.c  forkvm.h  fuzz.c  fuzz.h  main.c  mem_tracer.c  mem_tracer.h  private.h  shredder.c  shredder.h  signal.c  signal.h  vmi.c  vmi.h
